# AIdocAssistant

./: .flaskenv  .gitignore  CheckStructure.py  README.md  analys.py  bot.py  gost.json  pyproject.toml  requirements.txt
logic/: CheckStructure.py  CheckTitle.py  LlamaConfig.py  builder.py  datatypes.py  llama.py  main.py  partition.py
scripts/: reset_database.py  seed_templates.py  seed_users.py
telegram/: bot.py
web/: .flaskenv  .gitignore  app.py  config.py  index.html  manage.py  package.json  run.py  tailwind.config.js  test_db_path.py
web/App/: views.py
web/AppProps/: asgi.py  settings.py  wsgi.py
web/app/: __init__.py  commands.py  init_templates.py  models.py  page.tsx  seeds.py
web/app/forms/: auth.py
web/app/routes/: admin.py  ai.py  auth.py  documents.py  feedback.py  main.py
web/app/services/: ai_clients.py  document_service.py  export_service.py  recommendation_service.py
web/app/static/css/: main.css
web/app/static/js/: admin.js  api.js  editor.js  main.js
web/app/templates/: base.html
web/app/templates/admin/: error_reports.html  index.html  logs.html  users.html
web/app/templates/auth/: login.html  profile.html  register.html
web/app/templates/documents/: create.html  create_new.html  create_options.html  editor.html  index.html  preview.html  section_editor.html  section_form.html  select_section.html  select_structure.html  structure.html  structured_editor.html  upload.html
web/app/templates/partials/: _error_modal.html
web/app/utils/: decorators.py
web/arsenCODE/: app.py
web/arsenCODE/templatesARSEN/: choose.html  editor.html
web/instance/: app.db
web/logs/: nir_assistant.log.1  nir_assistant.log.2  nir_assistant.log.3  nir_assistant.log.4  nir_assistant.log.5  nir_assistant.log.6  nir_assistant.log.7
web/migrations/: env.py
web/migrations/versions/: c9cd6051319a_initial_migration_with_absolute_url.py
web/static/: styles.css
web/templates/: choose.html  form.html
